# graia_inkbot

./: README.md  main.py  pyproject.toml
config/: bot.conf
modules/: battle.py  conf_utils.py  data.py  img_utils.py  salmonrun.py
